--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 # Aether Library
 
 ## Installation
-To use the Aether library, clone this repo into your root directory. 
+To use the Aether library, clone this repo, pip install the requirements, then move Aether.py into your project's root directory.
+
 ```bash
 pip install -r requirements.txt 
 ```
@@ -27,9 +28,6 @@ input_data = {
 
 # Call the function
 output = client(function_key, input_data)
-
-# Print the result
-print(output)
 ```
 
 Get the API key from the Aether dashboard. Use the function key attached to the function you want to call.
