--- a/README
+++ b/README
@@ -1,34 +1,15 @@
+<!-- Add banner here -->
 
-# Aether Library
+# Aether
 
-## Installation
-To use the Aether library, clone this repo, pip install the requirements, then move Aether.py into your project's root directory.
+# Quickstart/Demo
 
-```bash
-pip install -r requirements.txt 
-```
-to install the required packages. 
+<!-- Add a demo for your project -->
 
+I believe that you should bring value to the reader as soon as possible. You should be able to get the user up and running with your project with minimal friction.
 
-## Example Usage
+If you have a quickstart guide, this is where it should be.
 
-```python
-from Aether import AetherClient
+Alternatively, you can add a demo to show what your project can do.
 
-# Initialize the Aether client
-client = AetherClient(
-	api_key=AETHER_API_KEY, 
-	openai_api_key=OPENAI_API_KEY
-)
-
-# Function ID and input data
-function_key = FUNCTION_KEY
-input_data = {
-	"Article": "This is an article...",
-}
-
-# Call the function
-output = client(function_key, input_data)
-```
-
-Get the API key from the Aether dashboard. Use the function key attached to the function you want to call.
+# Installation
